# Hitalent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: db.py  main.py  models.py  schemas.py
app/api/: answers.py  questions.py
app/core/: logging_config.py  settings.py
tests/: conftest.py  test_answers.py  test_questions.py
